:zap: context/properties